2014-06-06 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/massive/massive_add_alerts.php: Fixed bug that all
	agents the user can view would be target of the operation, if
	the user has an AW privilege for any agent group.

2014-06-05  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/ver_agente.php: Fix sql error in the layer that 
	appears when put the mouse over a node in network map related with tags
	in users without acl profiles assigned (just admin assigned) Ticket #824

2014-06-05  Sergio Martin <sergio.martin@artica.es>

	* operation/search_agents.php: Change the format of the agent interval
	from seconds to human format for in global search. Ticket #867

2014-06-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extensions/files_repo/files_repo_get_file.php,
	  extensions/files_repo/files_repo_list.php,
	  extensions/files_repo/functions_files_repo.php,
	  godmode/setup/setup_general.php: Improved the Windows
	compatibility and fixed some errors.

2014-06-05  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/agentes/configurar_agentes.php: Changed
	interval in conf.

2014-06-05  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/gis_maps/configure_gis_maps.php: Changed
	button when you update.

2014-06-05  Sergio Martin <sergio.martin@artica.es>

	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql: Added
	missed columns creation in migration scripts

2014-06-05  Junichi Satoh  <junichi@rworks.jp>
	
	* include/help/ja/help_plugin_macros.php,
	include/help/ja/help_alert_macros.php: Added new macros.

2014-06-05  Junichi Satoh  <junichi@rworks.jp>

	* godmode/modules/manage_network_components_form_common.php: Removed
	unnecesary variable.

2014-06-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/setup_general.php: Disable the "Enable
	Netflow" radio buttons if the server is installed on a
	Windows machine.
